--- a/PequenosEmpresarios/index.html
+++ b/PequenosEmpresarios/index.html
@@ -9,6 +9,8 @@
     <link id="lara-light-teal-link" rel="stylesheet" href="/lara-light-teal/theme.css">
     <script src="https://kit.fontawesome.com/a80632ba2b.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 </head>
 <body>
 <div id="app"></div>
